--- a/master/package.json
+++ b/master/package.json
@@ -7,13 +7,13 @@
   "dependencies": {
     "async": "0.1",
     "bunyan": "0.6",
-    "restify": "1.1.1",
+    "restify": "1.3",
     "node-uuid": "1.2.0",
     "nopt": "1.0.10",
     "retry": "0.6.0",
     "nodemailer": "0.3.2",
     "ldapjs": "0.4.8",
-    "expiring-lru-cache": "2.0.0",
+    "expiring-lru-cache": "2.0.x, >=2.0.1",
     "redis": "0.7",
     "hiredis": "0.1"
   },
