QA-101: Enable AMON tests to run on real HW after a successful nightly build (big forward step)
A good big first start at getting the Amon tests runnable in a real
headnode setup.

- amon-relay now includes the test suite (at least currently running
  parts of it).
- to run it:
     cd /opt/smartdc/agents/lib/node_modules/amon-relay && ./test/runtests.sh

--- a/.gitignore
+++ b/.gitignore
@@ -5,10 +5,8 @@ node_modules
 /amon.sublime*
 
 /build
-/bootstrap.json
-/agent/*.json
+/config*.json
 /test/config.json
-/test/prep.json
 /master/config.json
 /screencasts
 
