--- a/plugins/package.json
+++ b/plugins/package.json
@@ -6,8 +6,11 @@
   "private": true,
   "main": "lib/index.js",
   "dependencies": {
-    "bunyan": "0.6.8",
-    "restify": "1.0.1"
+    "bunyan": "0.6",
+    "restify": "1.3"
+  },
+  "devDependencies": {
+    "tap": "0.2"
   },
   "engines": {
     "node": ">=0.6"
