--- a/plugins/package.json
+++ b/plugins/package.json
@@ -7,9 +7,7 @@
   "main": "lib/index.js",
   "dependencies": {
     "bunyan": "0.6",
-    "restify": "1.3"
-  },
-  "devDependencies": {
+    "restify": "1.3",
     "tap": "0.2"
   },
   "engines": {
