MON-111: update to restify 1.4 (currently to sha 145ec022d2, pre-1.4.1)
Will keep the ticket open to update to 1.4.1 when it is released.
Also updated a couple packages to the latest node-ldapjs.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "devDependencies": {
-    "bunyan": "0.6.8",
-    "restify": "1.0.1",
-    "jshint": "0.5.8",
-    "ldapjs": "0.4.8",
+    "bunyan": "0.6",
+    "restify": "git://github.com/mcavage/node-restify.git#145ec022d2",
+    "jshint": "0.5",
+    "ldapjs": "git://github.com/mcavage/node-ldapjs.git#7d9b6debde",
     "async": "0.1",
     "http-signature": "0.9.8",
     "node-dev": "0.2",
