--- a/agent/package.json
+++ b/agent/package.json
@@ -5,8 +5,8 @@
   "private": true,
   "author": "Joyent (joyent.com)",
   "dependencies": {
-    "bunyan": "0.6.8",
-    "restify": "1.0.1",
+    "bunyan": "0.6",
+    "restify": "git://github.com/mcavage/node-restify.git#145ec022d2",
     "nopt": "1.0.10",
     "zutil": "0.2.1"
   },
