--- a/common/package.json
+++ b/common/package.json
@@ -6,8 +6,8 @@
   "author": "Joyent (joyent.com)",
   "main": "lib/index.js",
   "dependencies": {
-    "bunyan": "0.6.8",
-    "restify": "1.0.1",
+    "bunyan": "0.6",
+    "restify": "git://github.com/mcavage/node-restify.git#145ec022d2",
     "node-uuid": "1.2.0"
   },
   "engines": {
