--- a/relay/package.json
+++ b/relay/package.json
@@ -5,8 +5,8 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
-    "bunyan": "0.6.8",
-    "restify": "1.0.1",
+    "bunyan": "0.6",
+    "restify": "git://github.com/mcavage/node-restify.git#145ec022d2",
     "async": "0.1.15",
     "nopt": "1.0.10",
     "node-uuid": "1.3.3",
