--- a/master/package.json
+++ b/master/package.json
@@ -7,7 +7,7 @@
   "dependencies": {
     "async": "0.1",
     "bunyan": "0.6",
-    "restify": "git://github.com/mcavage/node-restify.git#145ec022d2",
+    "restify": "1.4.1",
     "node-uuid": "1.2.0",
     "nopt": "1.0.10",
     "retry": "0.6.0",
