--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "bunyan": "0.6",
     "restify": "1.4.1",
     "jshint": "0.5",
-    "ldapjs": "git://github.com/mcavage/node-ldapjs.git#7d9b6debde",
+    "ldapjs": "0.5.0",
     "async": "0.1",
     "http-signature": "0.9.8",
     "node-dev": "0.2",
