--- a/master/smf/amon-master.smf.in
+++ b/master/smf/amon-master.smf.in
@@ -25,7 +25,7 @@
       </method_context>
     </exec_method>
 
-    <exec_method type="method" name="restart" exec=":kill" timeout_seconds="60">
+    <exec_method type="method" name="refresh" exec=":kill" timeout_seconds="60">
       <method_context working_directory="/opt/smartdc/amon" />
     </exec_method>
 
