--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -6,14 +6,10 @@
     "caching": true
   },
   "cnapi": {
-    "url": "http://10.99.99.TODO:80",
-    "username": "admin",
-    "password": "TODO"
+    "url": "http://10.99.99.TODO:80"
   },
   "zapi": {
-    "url": "http://10.99.99.TODO:80",
-    "username": "admin",
-    "password": "TODO"
+    "url": "http://10.99.99.TODO:80"
   },
   "redis": {
     "host": "10.99.99.21",
