--- a/master/package.json
+++ b/master/package.json
@@ -6,17 +6,17 @@
   "private": true,
   "dependencies": {
     "async": "0.1",
-    "bunyan": "0.6",
-    "restify": "1.4.1",
-    "node-uuid": "1.2.0",
+    "bunyan": "0.7.0",
+    "restify": "1.4.2",
+    "node-uuid": "1.3.3",
     "nopt": "1.0.10",
     "retry": "0.6.0",
-    "nodemailer": "0.3.2",
-    "ldapjs": "git://github.com/mcavage/node-ldapjs.git#7d9b6debde",
+    "nodemailer": "0.3.20",
+    "ldapjs": "0.5.0",
     "expiring-lru-cache": "2.0.x, >=2.0.1",
-    "redis": "0.7",
-    "hiredis": "0.1",
-    "generic-pool": "1.0",
+    "redis": "0.7.2",
+    "hiredis": "0.1.14",
+    "generic-pool": "1.0.10",
     "tap": "0.2"
   },
   "bundledDependences": [
