HEAD-1124 rename zapi -> vmapi

--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -8,7 +8,7 @@
   "cnapi": {
     "url": "http://10.99.99.TODO:80"
   },
-  "zapi": {
+  "vmapi": {
     "url": "http://10.99.99.TODO:80"
   },
   "redis": {
