--- a/tools/mk/Makefile.node.targ
+++ b/tools/mk/Makefile.node.targ
@@ -10,8 +10,17 @@
 # eng.git and then update your repo to use the new version.
 #
 
+NODE_INSTALL ?= $(error NODE_INSTALL must be defined for Makefile.node.targ)
+
+
+ifeq ($(NODE_TARBALL),)
 $(NODE_EXEC) $(NPM_EXEC) $(NODE_WAF_EXEC): | deps/node/.git
 	(cd deps/node; ./configure $(NODE_CONFIG_FLAGS) && $(MAKE) && $(MAKE) install)
+else
+$(NODE_EXEC) $(NPM_EXEC) $(NODE_WAF_EXEC):
+	mkdir -p $(shell dirname $(NODE_INSTALL))
+	(cd $(shell dirname $(NODE_INSTALL)) && $(TAR) xf $(NODE_TARBALL))
+endif
 
 deps/node/.git: deps/node
 	git submodule update --init deps/node
