--- a/tools/mk/Makefile.node_prebuilt.defs
+++ b/tools/mk/Makefile.node_prebuilt.defs
@@ -18,7 +18,8 @@
 # Usage:
 #
 # - Define `NODE_PREBUILT_VERSION` in your Makefile to choose a node version.
-#   E.g.: `NODE_PREBUILT_VERSION=v0.6.19`.
+#   E.g.: `NODE_PREBUILT_VERSION=v0.6.19`. See other optional variables
+#   below.
 # - `include tools/mk/Makefile.node_prebuilt.defs` after this in your Makefile.
 # - `include tools/mk/Makefile.node_prebuilt.targ` near the end of your
 #   Makefile.
@@ -40,39 +41,55 @@
 # When including this Makefile, you MUST also specify:
 #
 #	NODE_PREBUILT_VERSION 	The node version in the prebuilt 'sdcnode'
-#							package to use. Typically this is one of the
-#							node version tags, e.g. "v0.6.18" but it
-#							can be any commitish.
+#				package to use. Typically this is one of the
+#				node version tags, e.g. "v0.6.18" but it
+#				can be any commitish.
 #
 # When including this Makefile, you MAY also specify:
 #
-#	NODE_PREBUILT_DIR 		The dir in which to find sdcnode builds.
-#							This can be a URL dir (with trailing '/') which
-#							serves Apache/Nginx dir listings.
-#							(default: sdcnode master build dir on stuff)
+#	NODE_PREBUILT_DIR 	The dir in which to find sdcnode builds. This
+#				can either be a *local directory* or *a
+#				URL* dir (with trailing '/') which serves
+#				Apache/Nginx dir listing HTML.
+#				(default: sdcnode master build dir on stuff)
 #
-# 	NODE_PREBUILT_TAG		The 'sdcnode' project supports special
-# 							configuration builds of node, e.g. say a
-# 							build configured `--without-ssl`. These
-# 							special configurations are given a tag
-# 							name that is used in the filename. Optionally
-# 							specify a tag name here.
-# 							(default: empty)
+#	NODE_PREBUILT_TAG	The 'sdcnode' project supports special
+#				configuration builds of node, e.g. say a
+#				build configured `--without-ssl`. These
+#				special configurations are given a tag
+#				name that is used in the filename. Optionally
+#				specify a tag name here.
+#				(default: empty)
 #
-#   NODE_PREBUILT_BRANCH    Specify a particular branch of 'sdcnode' builds
-#   						from which to pull. Generally one should stick
-#   						with the default.
-#   						(default: master)
+#	NODE_PREBUILT_BRANCH	Specify a particular branch of 'sdcnode' builds
+#				from which to pull. Generally one should stick
+#				with the default.
+#				(default: master)
 #
-#	BUILD					top-level directory for built binaries
-#							(default: "build")
+#	BUILD			top-level directory for built binaries
+#				(default: "build")
 #
-#	NODE_INSTALL			where node should install its built items
-#							(default: "$BUILD/node")
+#	NODE_INSTALL		where node should install its built items
+#				(default: "$BUILD/node")
 #
-#	NPM_FLAGS				extra flags to pass to npm invocations
-#							(default: empty)
+#	NPM_FLAGS		extra flags to pass to npm invocations
+#				(default: empty)
 #
+#
+# Dev Notes:
+#
+# This works by getting "NODE_PREBUILT_NAME" from the provided "NODE_PREBUILT_*"
+# vars and the current compiler version. The compiler version is included
+# to ensure an exact match with the build machine, because of sketchy
+# cross-version C++ compat. This name (e.g. "v0.6.18-gcc4.6.1") is used to
+# find a matching "sdcnode-$name-*.tgz" build in "NODE_PREBUILT_DIR"
+# (either a local directory or a URL). That tarball is downloaded and
+# extracted into "NODE_INSTALL".
+#
+# The "*_EXEC" vars are set to named symlinks, e.g.
+# "build/prebuilt-node-v0.6.18-gcc4.6.1", so that a change of selected node
+# build (say the developer changes NODE_PREBUILT_VERSION) will recreate the
+# node install.
 #
 # See <https://mo.joyent.com/docs/sdcnode/master/> for details on 'sdcnode-*'
 # package naming.
@@ -82,8 +99,8 @@ TOP ?= $(error You must include Makefile.defs before this makefile)
 NODE_PREBUILT_VERSION ?= $(error NODE_PREBUILT_VERSION is not set.)
 
 
-BUILD			?= build
-NODE_INSTALL 	?= $(BUILD)/node
+BUILD		?= build
+NODE_INSTALL	?= $(BUILD)/node
 DISTCLEAN_FILES	+= $(NODE_INSTALL) \
 	$(BUILD)/prebuilt-node-* $(BUILD)/prebuilt-npm-*
 
@@ -121,15 +138,12 @@ endif
 # Prebuild-specific paths for the "*_EXEC" vars to ensure that
 # a prebuild change (e.g. if master Makefile's NODE_PREBUILT_VERSION
 # choice changes) causes a install of the new node.
-NODE_EXEC 		:= $(BUILD)/prebuilt-node-$(NODE_PREBUILT_NAME)
-NODE_WAF_EXEC 	:= $(BUILD)/prebuilt-node-waf-$(NODE_PREBUILT_NAME)
-NPM_EXEC  		:= $(BUILD)/prebuilt-npm-$(NODE_PREBUILT_NAME)
+NODE_EXEC	:= $(BUILD)/prebuilt-node-$(NODE_PREBUILT_NAME)
+NODE_WAF_EXEC	:= $(BUILD)/prebuilt-node-waf-$(NODE_PREBUILT_NAME)
+NPM_EXEC	:= $(BUILD)/prebuilt-npm-$(NODE_PREBUILT_NAME)
 
 # Ensure these use absolute paths to the executables to allow running
 # from a dir other than the project top.
 NODE		:= $(TOP)/$(NODE_INSTALL)/bin/node
 NODE_WAF	:= $(TOP)/$(NODE_INSTALL)/bin/node-waf
-NPM			:= PATH=$(TOP)/$(NODE_INSTALL)/bin:$(PATH) $(TOP)/$(NODE_INSTALL)/bin/npm $(NPM_FLAGS)
-
-
-
+NPM		:= PATH=$(TOP)/$(NODE_INSTALL)/bin:$(PATH) $(TOP)/$(NODE_INSTALL)/bin/npm $(NPM_FLAGS)
