MON-142 amon-relay provided "bunyan" doesn't work in the GZ anymore: using "#!/usr/bin/env node"

--- a/relay/package.json
+++ b/relay/package.json
@@ -19,7 +19,7 @@
     "preuninstall": "./pkg/preuninstall.sh"
   },
   "bin": {
-    "bunyan": "./node_modules/bunyan/bin/bunyan"
+    "bunyan": "./bin/bunyan"
   },
   "engines": {
     "node": ">=0.6"
