--- a/agent/package.json
+++ b/agent/package.json
@@ -5,6 +5,9 @@
   "private": true,
   "author": "Joyent (joyent.com)",
   "dependencies": {
+    "amon-common": "1.0.0",
+    "amon-plugins": "1.0.0",
+
     "bunyan": "0.10.0",
     "restify": "1.4.3",
     "nopt": "1.0.10",
