--- a/master/package.json
+++ b/master/package.json
@@ -5,6 +5,10 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#6a1b4a818356d1848a484dc3c979f3a588950753",
+    "amon-common": "1.0.0",
+    "amon-plugins": "1.0.0",
+
     "async": "0.1",
     "bunyan": "0.10.0",
     "restify": "1.4.3",
@@ -19,9 +23,6 @@
     "generic-pool": "1.0.10",
     "tap": "0.2"
   },
-  "bundledDependences": [
-    "sdc-clients"
-  ],
   "scripts": {
     "start": "node ./main.js"
   },
