--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "devDependencies": {
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#6a1b4a818356d1848a484dc3c979f3a588950753",
+    "amon-common": "1.0.0",
+
     "bunyan": "0.10.0",
     "restify": "1.4.3",
     "jshint": "0.7.1",
@@ -16,10 +19,6 @@
     "redis": "0.7.2",
     "hiredis": "0.1.14"
   },
-  "bundledDependences": [
-    "sdc-clients",
-    "amon-common"
-  ],
   "scripts": {
     "test": "make test"
   },
