--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "node-dev": "0.2",
     "node-uuid": "1.3.3",
     "redis": "0.7.2",
-    "hiredis": "0.1.14"
+    "hiredis": "0.1.14",
+    "jsontool": "3.3.0"
   },
   "scripts": {
     "test": "make test"
