--- a/agent/smf/manifests/amon-agent.xml.in
+++ b/agent/smf/manifests/amon-agent.xml.in
@@ -15,7 +15,7 @@
     <exec_method
       type="method"
       name="start"
-      exec="@@PREFIX@@/lib/node_modules/amon-agent/bin/amon-agent -v &amp;"
+      exec="@@PREFIX@@/bin/amon-agent -v &amp;"
       timeout_seconds="10">
       <method_context>
         <method_credential user="root" group="staff"/>
