MON-164 Probe types with matching: provide plain string matching (and more)
This adds commonalized "matching" support to probe.js that log-scan
and http probes now use. Attach word matching, plain string matching,
invert (like 'grep -v').

Also update to latest bunyan. Clean up some naming and logging in
plugins/*.

--- a/plugins/package.json
+++ b/plugins/package.json
@@ -6,7 +6,10 @@
   "private": true,
   "main": "lib/index.js",
   "dependencies": {
-    "bunyan": "0.10.0",
+    "bunyan": "0.13.1",
+    "assert-plus": "0.1.0"
+  },
+  "devDependencies": {
     "tap": "0.2"
   },
   "engines": {
