--- a/master/package.json
+++ b/master/package.json
@@ -17,7 +17,7 @@
     "retry": "0.6.0",
     "nodemailer": "0.3.20",
     "ldapjs": "0.5.4",
-    "expiring-lru-cache": "2.0.x, >=2.0.1",
+    "expiring-lru-cache": "2.1.0",
     "redis": "0.7.2",
     "hiredis": "0.1.14",
     "generic-pool": "1.0.10",
