--- a/master/package.json
+++ b/master/package.json
@@ -9,20 +9,19 @@
     "amon-common": "1.0.0",
     "amon-plugins": "1.0.0",
 
-    "async": "0.1",
-    "bunyan": "0.15.0",
-    "restify": "1.4.4",
-    "node-uuid": "1.3.3",
+    "async": "0.1.22",
+    "bunyan": "0.16.8",
+    "restify": "git://github.com/mcavage/node-restify.git#198dcbb",
+    "node-uuid": "1.4.0",
     "nopt": "1.0.10",
     "retry": "0.6.0",
-    "nodemailer": "0.3.20",
-    "ldapjs": "0.5.4",
+    "nodemailer": "0.3.37",
+    "ldapjs": "0.5.7",
     "expiring-lru-cache": "2.1.0",
-    "redis": "0.7.2",
-    "hiredis": "0.1.14",
-    "generic-pool": "1.0.10",
-    "tap": "0.2",
-    "assert-plus": "0.1.0"
+    "redis": "0.8.2",
+    "generic-pool": "2.0.2",
+    "tap": "0.3.3",
+    "assert-plus": "0.1.2"
   },
   "scripts": {
     "start": "node ./main.js"
