--- a/common/package.json
+++ b/common/package.json
@@ -6,9 +6,8 @@
   "author": "Joyent (joyent.com)",
   "main": "lib/index.js",
   "dependencies": {
-    "bunyan": "0.15.0",
-    "restify": "1.4.4",
-    "node-uuid": "1.3.3"
+    "restify": "git://github.com/mcavage/node-restify.git#198dcbb",
+    "node-uuid": "1.4.0"
   },
   "engines": {
     "node": ">=0.6"
