--- a/relay/package.json
+++ b/relay/package.json
@@ -5,15 +5,16 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#8916b79",
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#49afb7e",
     "amon-common": "1.0.0",
     "amon-plugins": "1.0.0",
 
-    "bunyan": "0.15.0",
-    "restify": "1.4.4",
+    "assert-plus": "0.1.2",
+    "bunyan": "0.16.8",
+    "restify": "git://github.com/mcavage/node-restify.git#198dcbb",
     "async": "0.1.22",
     "nopt": "1.0.10",
-    "node-uuid": "1.3.3",
+    "node-uuid": "1.4.0",
     "zsock": "1.2.0",
     "zutil": "0.2.1"
   },
