--- a/agent/package.json
+++ b/agent/package.json
@@ -8,9 +8,9 @@
     "amon-common": "1.0.0",
     "amon-plugins": "1.0.0",
 
-    "bunyan": "0.16.8",
-    "restify": "git://github.com/mcavage/node-restify.git#198dcbb",
-    "nopt": "1.0.10",
+    "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
+    "bunyan": "0.20.0",
+    "nopt": "2.1.1",
     "zutil": "0.2.1"
   },
   "scripts": {
@@ -19,6 +19,6 @@
     "preuninstall": "pkg/preuninstall.sh"
   },
   "engines": {
-    "node": ">=0.6"
+    "node": ">=0.8"
   }
 }
