--- a/package.json
+++ b/package.json
@@ -5,25 +5,23 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "devDependencies": {
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#8916b79",
     "amon-common": "1.0.0",
 
-    "bunyan": "0.15.0",
-    "restify": "1.4.4",
-    "jshint": "0.7.1",
-    "ldapjs": "0.5.4",
-    "async": "0.1",
-    "http-signature": "0.9.9",
-    "node-dev": "0.2",
-    "node-uuid": "1.3.3",
-    "redis": "0.7.2",
-    "hiredis": "0.1.14",
-    "jsontool": "3.3.0"
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#fe76c2f",
+    "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
+    "bunyan": "0.20.0",
+    "ldapjs": "0.5.7",
+    "async": "0.1.22",
+    "http-signature": "0.9.11",
+    "node-dev": "2.0.1",
+    "node-uuid": "1.4.0",
+    "redis": "0.8.2",
+    "jsontool": "5.1.3"
   },
   "scripts": {
     "test": "make test"
   },
   "engines": {
-    "node": ">=0.6"
+    "node": ">=0.8"
   }
 }
