--- a/relay/package.json
+++ b/relay/package.json
@@ -5,17 +5,17 @@
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#49afb7e",
     "amon-common": "1.0.0",
     "amon-plugins": "1.0.0",
 
+    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#fe76c2f",
+    "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "assert-plus": "0.1.2",
-    "bunyan": "0.16.8",
-    "restify": "git://github.com/mcavage/node-restify.git#198dcbb",
+    "bunyan": "0.20.0",
     "async": "0.1.22",
-    "nopt": "1.0.10",
+    "nopt": "2.1.1",
     "node-uuid": "1.4.0",
-    "zsock": "1.2.0",
+    "zsock": "1.3.1",
     "zutil": "0.2.1"
   },
   "scripts": {
@@ -27,6 +27,6 @@
     "bunyan": "./bin/bunyan"
   },
   "engines": {
-    "node": ">=0.6"
+    "node": ">=0.8"
   }
 }
