--- a/master/package.json
+++ b/master/package.json
@@ -13,7 +13,7 @@
     "once": "1.1.1",
     "async": "0.1.22",
     "bunyan": "0.21.3",
-    "node-uuid": "1.4.0",
+    "libuuid": "0.1.2",
     "nopt": "2.1.1",
     "retry": "0.6.0",
     "nodemailer": "0.3.44",
