--- a/relay/package.json
+++ b/relay/package.json
@@ -14,7 +14,7 @@
     "bunyan": "0.21.3",
     "async": "0.1.22",
     "nopt": "2.1.1",
-    "node-uuid": "1.4.0",
+    "libuuid": "0.1.2",
     "zsock": "1.3.1",
     "zutil": "0.2.1"
   },
