--- a/master/package.json
+++ b/master/package.json
@@ -18,6 +18,7 @@
     "retry": "0.6.0",
     "nodemailer": "0.3.44",
     "ldapjs": "0.5.7",
+    "lru-cache": "2.5.0",
     "expiring-lru-cache": "2.1.0",
     "redis": "0.8.2",
     "assert-plus": "0.1.2"
