--- a/tools/jsl.node.conf
+++ b/tools/jsl.node.conf
@@ -21,7 +21,7 @@
 +dup_option_explicit          # duplicate "option explicit" control comment
 +duplicate_case_in_switch     # duplicate case in switch statement
 +duplicate_formal             # duplicate formal argument {name}
-+empty_statement              # empty statement or extra semicolon
+-empty_statement              # empty statement or extra semicolon
 +identifier_hides_another     # identifer {name} hides an identifier in a parent scope
 -inc_dec_within_stmt          # increment (++) and decrement (--) operators used as part of greater statement
 +incorrect_version            # Expected /*jsl:content-type*/ control comment. The script was parsed with the wrong version.
