--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "amon-common": "1.0.0",
 
     "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#fe76c2f",
+    "ufds": "git+ssh://git@github.com:joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab",
     "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "bunyan": "0.21.3",
-    "ldapjs": "0.5.7",
+    "ldapjs": "git+ssh://git@github.com:mcavage/node-ldapjs.git#aed6d2b043715e1a37c45a6293935c25c023ebce",
     "async": "0.1.22",
     "http-signature": "0.9.11",
     "node-dev": "2.0.1",
