--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "devDependencies": {
     "amon-common": "1.0.0",
 
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#fe76c2f",
+    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#fe76c2f",
     "ufds": "git+ssh://git@github.com:joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab",
     "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "bunyan": "0.21.3",
