TOOLS-615 update dependency URLs

--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = git://github.com/davepacheco/jsstyle.git
 [submodule "deps/sdc-scripts"]
 	path = deps/sdc-scripts
-	url = git@git.joyent.com:sdc-scripts.git
+	url = git@github.com:joyent/sdc-scripts.git
 [submodule "deps/restdown-brand-remora"]
 	path = deps/restdown-brand-remora
 	url = git@github.com:joyent/restdown-brand-remora.git
