--- a/master/package.json
+++ b/master/package.json
@@ -22,7 +22,7 @@
     "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "redis": "0.8.2",
     "retry": "0.6.0",
-    "sdc-clients": "git+ssh://git@git.joyent.com:node-sdc-clients.git#beace1d",
+    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#beace1d",
     "ufds": "git+ssh://git@github.com:joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab"
   },
   "devDependencies": {
