--- a/relay/package.json
+++ b/relay/package.json
@@ -11,6 +11,7 @@
     "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#beace1d",
     "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "assert-plus": "0.1.2",
+    "backoff": "2.4.0",
     "bunyan": "0.21.3",
     "async": "0.1.22",
     "nopt": "2.1.1",
