--- a/agent/package.json
+++ b/agent/package.json
@@ -11,6 +11,7 @@
     "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
     "backoff": "2.4.0",
     "bunyan": "0.22.1",
+    "once": "1.3.2",
     "nopt": "2.1.1",
     "zutil": "0.2.1"
   },
