--- a/relay/package.json
+++ b/relay/package.json
@@ -15,6 +15,7 @@
     "bunyan": "0.21.3",
     "async": "0.1.22",
     "nopt": "2.1.1",
+    "once": "1.3.2",
     "libuuid": "0.1.2",
     "zsock": "1.3.1",
     "zutil": "0.2.1"
