--- a/master/package.json
+++ b/master/package.json
@@ -1,7 +1,7 @@
 {
   "name": "amon-master",
-  "description": "Smart DataCenter Monitoring Master component",
-  "version": "1.0.0",
+  "description": "Triton DataCenter Monitoring API",
+  "version": "1.1.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "// dependencies": "mailcomposer is a hack for MON-347",
