RELENG-612 prefer (git+)https urls Reviewed by: Trent Mick <trentm@gmail.com> Approved by: Trent Mick <trentm@gmail.com>

--- a/relay/package.json
+++ b/relay/package.json
@@ -8,8 +8,8 @@
     "amon-common": "*",
     "amon-plugins": "*",
 
-    "sdc-clients": "git+ssh://git@github.com:joyent/node-sdc-clients.git#beace1d",
-    "restify": "git+ssh://git@github.com:trentm/node-restify.git#7535bb3",
+    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#beace1d",
+    "restify": "git+https://github.com/trentm/node-restify.git#7535bb3",
     "assert-plus": "0.1.2",
     "backoff": "2.4.0",
     "bunyan": "0.21.3",
