--- a/master/package.json
+++ b/master/package.json
@@ -21,12 +21,12 @@
     "node-xmpp-client": "0.4.0",
     "nopt": "2.1.1",
     "once": "1.1.1",
-    "restify": "git+https://github.com/trentm/node-restify.git#7535bb3",
+    "restify": "git+ssh://github.com/trentm/node-restify.git#7535bb3",
     "redis": "0.12.1",
     "retry": "0.6.0",
     "extsprintf": "1.3.0",
-    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#beace1d",
-    "ufds": "git+https://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab"
+    "sdc-clients": "git+ssh://github.com/joyent/node-sdc-clients.git#beace1d",
+    "ufds": "git+ssh://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab"
   },
   "devDependencies": {
     "tap": "0.4.0"
