--- a/agent/package.json
+++ b/agent/package.json
@@ -8,7 +8,7 @@
     "amon-common": "*",
     "amon-plugins": "*",
 
-    "restify": "git+ssh://github.com/trentm/node-restify.git#7535bb3",
+    "restify": "git://github.com/trentm/node-restify.git#7535bb3",
     "backoff": "2.4.0",
     "bunyan": "0.22.1",
     "once": "1.3.2",
