--- a/master/package.json
+++ b/master/package.json
@@ -21,7 +21,7 @@
     "node-xmpp-client": "0.4.0",
     "nopt": "2.1.1",
     "once": "1.1.1",
-    "restify": "git+ssh://github.com/trentm/node-restify.git#7535bb3",
+    "restify": "git://github.com/trentm/node-restify.git#7535bb3",
     "redis": "0.12.1",
     "retry": "0.6.0",
     "extsprintf": "1.3.0",
