--- a/master/package.json
+++ b/master/package.json
@@ -25,8 +25,8 @@
     "redis": "0.12.1",
     "retry": "0.6.0",
     "extsprintf": "1.3.0",
-    "sdc-clients": "git+ssh://github.com/joyent/node-sdc-clients.git#beace1d",
-    "ufds": "git+ssh://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab"
+    "sdc-clients": "git://github.com/joyent/node-sdc-clients.git#beace1d",
+    "ufds": "git://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab"
   },
   "devDependencies": {
     "tap": "0.4.0"
