--- a/relay/package.json
+++ b/relay/package.json
@@ -8,7 +8,7 @@
     "amon-common": "*",
     "amon-plugins": "*",
 
-    "sdc-clients": "git+ssh://github.com/joyent/node-sdc-clients.git#beace1d",
+    "sdc-clients": "git://github.com/joyent/node-sdc-clients.git#beace1d",
     "restify": "git://github.com/trentm/node-restify.git#7535bb3",
     "assert-plus": "0.1.2",
     "backoff": "2.4.0",
