--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "private": true,
   "devDependencies": {
     "amon-common": "1.0.0",
-    "sdc-clients": "git+ssh://github.com:joyent/node-sdc-clients.git#fe76c2f",
-    "ufds": "git+ssh://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab",
-    "restify": "git+ssh://github.com/trentm/node-restify.git#7535bb3",
+    "sdc-clients": "git://github.com:joyent/node-sdc-clients.git#fe76c2f",
+    "ufds": "git://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab",
+    "restify": "git://github.com/trentm/node-restify.git#7535bb3",
     "bunyan": "0.21.3",
-    "ldapjs": "git+ssh://github.com/mcavage/node-ldapjs.git#aed6d2b043715e1a37c45a6293935c25c023ebce",
+    "ldapjs": "git://github.com/mcavage/node-ldapjs.git#aed6d2b043715e1a37c45a6293935c25c023ebce",
     "async": "0.1.22",
     "http-signature": "0.9.11",
     "node-dev": "2.0.1",
