TOOLS-2043 Lullaby 3: Improving the Manta/Triton build TOOLS-2062 eng.git should be a git submodule of Triton/Manta repositories TOOLS-2063 shared tooling needed to build Manta/Triton agents Reviewed by: Chris Burroughs <chris.burroughs@joyent.com> Reviewed by: Trent Mick <trentm@gmail.com> Approved by: Trent Mick <trentm@gmail.com>

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,10 @@ node_modules
 /amon.sublime*
 .DS_Store
 
+/bits
 /build
 /config*.json
+/make_stamps
 /test/config.json
 /master/config.json
 /screencasts
