--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "amon",
   "description": "Amon development package (see '*/package.json' for the actual code)",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "devDependencies": {
     "amon-common": "1.0.0",
-    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#fe76c2f",
-    "ufds": "git+https://github.com/joyent/node-ufds#1ace075d7c89579c1ee547e50812c4d73890efab",
+    "sdc-clients": "^13.0.4",
+    "ufds": "^1.7.0",
     "restify": "git+https://github.com/trentm/node-restify.git#7535bb3",
     "bunyan": "0.21.3",
-    "ldapjs": "git+https://github.com/mcavage/node-ldapjs.git#aed6d2b043715e1a37c45a6293935c25c023ebce",
+    "ldapjs": "git+https://github.com/joyent/node-ldapjs.git#e2c9b1243088c64fd29ba4dfa1c14ef7e6f3b29c",
     "async": "0.1.22",
     "http-signature": "0.9.11",
     "node-dev": "2.0.1",
@@ -22,7 +22,7 @@
     "test": "make test"
   },
   "engines": {
-    "node": ">=0.8"
+    "node": ">=0.10"
   },
   "license": "MPL-2.0"
 }
