--- a/relay/package.json
+++ b/relay/package.json
@@ -1,14 +1,14 @@
 {
   "name": "amon-relay",
   "description": "Smart DataCenter Monitoring Relay component",
-  "version": "1.0.1",
+  "version": "2.0.0",
   "author": "Joyent (joyent.com)",
   "private": true,
   "dependencies": {
     "amon-common": "*",
     "amon-plugins": "*",
 
-    "sdc-clients": "git+https://github.com/joyent/node-sdc-clients.git#beace1d",
+    "sdc-clients": "^13.0.4",
     "restify": "git+https://github.com/trentm/node-restify.git#7535bb3",
     "assert-plus": "0.1.2",
     "backoff": "2.4.0",
@@ -17,8 +17,8 @@
     "nopt": "2.1.1",
     "once": "1.3.2",
     "libuuid": "0.1.2",
-    "zsock": "1.3.1",
-    "zutil": "0.2.1"
+    "zsock": "2.0.0",
+    "zutil": "1.0.0"
   },
   "scripts": {
     "start": "./bin/amon-relay",
@@ -29,7 +29,7 @@
     "bunyan": "./bin/bunyan"
   },
   "engines": {
-    "node": ">=0.8"
+    "node": ">=0.10"
   },
   "license": "MPL-2.0"
 }
