--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "name": "amon",
   "description": "Amon development package (see '*/package.json' for the actual code)",
-  "version": "2.0.0",
+  "version": "2.0.1",
   "author": "Joyent (joyent.com)",
   "private": true,
   "devDependencies": {
     "amon-common": "1.0.0",
-    "sdc-clients": "^13.0.4",
+    "sdc-clients": "^13.0.5",
     "ufds": "^1.7.0",
-    "restify": "git+https://github.com/trentm/node-restify.git#7535bb3",
+    "restify": "git+https://github.com/joyent/node-restify.git#d675012",
     "bunyan": "0.21.3",
-    "ldapjs": "git+https://github.com/joyent/node-ldapjs.git#e2c9b1243088c64fd29ba4dfa1c14ef7e6f3b29c",
+    "ldapjs": "git+https://github.com/joyent/node-ldapjs.git#b13e50a",
     "async": "0.1.22",
     "http-signature": "0.9.11",
     "node-dev": "2.0.1",
