--- a/.gitmodules
+++ b/.gitmodules
@@ -9,7 +9,7 @@
 	url = https://github.com/TritonDataCenter/jsstyle.git
 [submodule "deps/sdc-scripts"]
 	path = deps/sdc-scripts
-	url = https://github.com/joyent/sdc-scripts.git
+	url = https://github.com/TritonDataCenter/sdc-scripts.git
 [submodule "deps/restdown-brand-remora"]
 	path = deps/restdown-brand-remora
 	url = https://github.com/TritonDataCenter/restdown-brand-remora.git
