TOOLS-2574 Purge dependency on us-east.manta.joyent.com name

--- a/master/config.coal.json
+++ b/master/config.coal.json
@@ -17,7 +17,7 @@
   },
   "notificationPlugins": [
     {
-      "type": "email"
+      "type": "email",
       "path": "./notifications/email",
       "config": {
         "smtp": {
@@ -26,7 +26,7 @@
           "ssl": false,
           "use_authentication": false
         },
-        "from": "\"Monitoring\" <no-reply@joyent.com>"
+        "from": "\"Monitoring\" <no-reply@tritondatacenter.com>"
       }
     }
   ]
