--- a/master/package.json
+++ b/master/package.json
@@ -1,8 +1,8 @@
 {
   "name": "amon-master",
   "description": "Triton DataCenter Monitoring API",
-  "version": "1.1.0",
-  "author": "Joyent (joyent.com)",
+  "version": "1.1.1",
+  "author": "MNX Cloud, Inc.",
   "private": true,
   "// dependencies": "mailcomposer is a hack for MON-347",
   "dependencies": {
@@ -17,11 +17,11 @@
     "lru-cache": "2.5.0",
     "ltx": "0.4.1",
     "nodemailer": "0.3.44",
-      "mailcomposer": "0.2.12",
+    "mailcomposer": "0.2.12",
     "node-xmpp-client": "0.4.0",
     "nopt": "2.1.1",
     "once": "1.1.1",
-    "restify": "git+https://github.com/joyent/node-restify.git#d675012",
+    "restify": "git+https://github.com/TritonDataCenter/node-restify.git#d675012",
     "redis": "0.12.1",
     "retry": "0.6.0",
     "extsprintf": "1.3.0",
