--- a/agent/package.json
+++ b/agent/package.json
@@ -1,13 +1,13 @@
 {
   "name": "amon-agent",
-  "description": "Smart DataCenter Monitoring Agent",
-  "version": "2.0.1",
+  "description": "Triton DataCenter Monitoring Agent",
+  "version": "2.0.2",
   "private": true,
-  "author": "Joyent (joyent.com)",
+  "author": "MNX Cloud, Inc.",
   "dependencies": {
     "amon-common": "*",
     "amon-plugins": "*",
-    "restify": "git+https://github.com/joyent/node-restify.git#d675012",
+    "restify": "git+https://github.com/TritonDataCenter/node-restify.git#d675012",
     "backoff": "2.4.0",
     "bunyan": "0.22.1",
     "once": "1.3.2",
