--- a/common/package.json
+++ b/common/package.json
@@ -1,12 +1,12 @@
 {
   "name": "amon-common",
-  "description": "Smart DataCenter Monitoring common utilities",
-  "version": "1.0.0",
+  "description": "Triton DataCenter Monitoring common utilities",
+  "version": "1.0.1",
   "private": true,
-  "author": "Joyent (joyent.com)",
+  "author": "MNX Cloud, Inc.",
   "main": "lib/index.js",
   "dependencies": {
-    "restify": "git+https://github.com/joyent/node-restify.git#d675012",
+    "restify": "git+https://github.com/TritonDataCenter/node-restify.git#d675012",
     "libuuid": "0.1.2"
   },
   "engines": {
