--- a/master/config.mac.json
+++ b/master/config.mac.json
@@ -27,7 +27,7 @@
       "path": "./notifications/email",
       "config": {
         "sendmail": "/usr/sbin/sendmail -i",
-        "from": "\"Amon Dev (no reply)\" <no-reply@joyent.com>"
+        "from": "\"Amon Dev (no reply)\" <no-reply@tritondatacenter.com>"
       }
     }
   }
